<resources>
    <string name="app_name">JamMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">Post</string>
    <string name="post_what_ever_you_want_to_share_with_the_community">Post what ever you want to share with the community</string>
    <string name="title">Title</string>
    <string name="e_g_looking_to_jam_this_weekend">e.g. Looking to jam this weekend</string>
    <string name="description">Description</string>
    <string name="write_something">Write something…</string>
    <string name="image_url_optional">Image URL (Optional)</string>
    <string name="back">Back</string>
    <string name="publish">Publish</string>
    <string name="location">Location</string>
    <string name="jam">Post Jam</string>
    <string name="jam_post_subtitle">Invite musicians and others to join you in a jam</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="this_helps_other_musicians_find_you">This helps other musicians find you</string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="next_step">Next Step</string>
    <string name="finish">Finish</string>
    <string name="personal_details">Personal Details</string>
    <string name="let_s_build_your_identity">Let\'s build your identity</string>
    <string name="first_name">First Name</string>
    <string name="jane">Jane</string>
    <string name="last_name">Last Name</string>
    <string name="doe">Doe</string>
    <string name="stage_name_optional">Stage Name (Optional)</string>
    <string name="the_rocker">The Rocker</string>
    <string name="city">City</string>
    <string name="austin_tx">Austin, TX</string>
    <string name="about_optional">About (Optional)</string>
    <string name="tell_a_bit_about_you">Tell a bit about you…</string>
    <string name="normal_post">Normal Post</string>
    <string name="share">Share</string>
    <string name="add_location">Add Location</string>
    <string name="set_date_amp_time"><![CDATA[📅 Set Date & Time]]></string>
    <string name="seeking_instruments">Seeking Instruments:</string>
    <string name="preferred_genres">Preferred Genres:</string>
    <string name="skill_level">Skill Level:</string>
    <string name="write_a_caption">Write a caption…</string>
    <string name="create_new_post">Create New Post</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_video">Select Video</string>
    <string name="publishing">Publishing...</string>
    <string name="light">Light</string>
    <string name="settings">Settings</string>
    <string name="dark">Dark</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="follow">Follow</string>
    <string name="likes">Likes</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="about">About</string>
    <string name="about_me">About Me</string>
    <string name="expertise_amp_genres"><![CDATA[Expertise & Genres]]></string>
    <string name="get_started">Get Started</string>
    <string name="find_your_rhythm_connect_with_musicians">Find your rhythm. Connect with musicians.</string>
    <string name="jammate">JamMate</string>
    <string name="your_music">Your Music</string>
    <string name="let_others_know_your_vibe">Let others know your vibe</string>
    <string name="instruments">Instruments</string>
    <string name="electric_guitar">Electric Guitar</string>
    <string name="drums">Drums</string>
    <string name="bass">Bass</string>
    <string name="vocals">Vocals</string>
    <string name="piano">Piano</string>
    <string name="keys">Keys</string>
    <string name="saxophone">Saxophone</string>
    <string name="violin">Violin</string>
    <string name="trumpet">Trumpet</string>
    <string name="acoustic_guitar">Acoustic Guitar</string>
    <string name="cello">Cello</string>
    <string name="genres">Genres</string>
    <string name="rock">Rock</string>
    <string name="indie">Indie</string>
    <string name="jazz">Jazz</string>
    <string name="blues">Blues</string>
    <string name="hip_hop">Hip-Hop</string>
    <string name="pop">Pop</string>
    <string name="electronic">Electronic</string>
    <string name="metal">Metal</string>
    <string name="folk">Folk</string>
    <string name="r_amp_b"><![CDATA[R&B]]></string>
    <string name="funk">Funk</string>
    <string name="describe_your_experience_level">Describe your experience level</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="professional">Professional</string>
    <string name="search_jams_musicians">Search jams, musicians...</string>
    <string name="no_notifications_yet">No notifications yet</string>
    <string name="username">Username</string>
    <string name="this_is_a_comment_text">This is a comment text.</string>
    <string name="_2h_ago">2h ago</string>
    <string name="post_media">Post media</string>
    <string name="_0">0</string>
    <string name="apply">Apply</string>
    <string name="dj_rot">DJ Rot</string>
    <string name="tel_aviv">Tel Aviv</string>
    <string name="looking_for_drummer_tonight">Looking for drummer tonight...</string>
    <string name="join_the_jam">Join the Jam</string>
    <string name="select_how_you_want_to_continue">Select how you want to continue</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="profile_photo">Profile photo</string>
    <string name="choose_new_photo">Choose new photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="cancel">Cancel</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="send_comment">Send comment</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_action_cannot_be_undone">This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="post_options">Post Options</string>
    <string name="delete_post">Delete Post</string>
    <string name="what_are_you_posting">What are you posting?</string>
    <string name="jam_session">Jam Session</string>
    <string name="band_member">Band Member</string>
</resources>