<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/comment_IMG_avatar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.JamMate.Circle" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/comment_LBL_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/app_text_main"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment_LBL_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/this_is_a_comment_text"
            android:textColor="@color/app_text_main"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/comment_LBL_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/_2h_ago"
            android:textColor="@color/app_text_secondary"
            android:textSize="11sp" />
    </LinearLayout>

</LinearLayout>